--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
-    <string name="app_name">LittleLemon</string>
+    <string name="app_name">Little Lemon</string>
+    <string name="title">Little Lemon</string>
+    <string name="location">Chicago</string>
+    <string name="description">We are a family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist.</string>
+    <string name="lab_order_for_delivery">Order for delivery!</string>
+    <string name="lab_starters">Starters</string>
+    <string name="lab_mains">Mains</string>
+    <string name="lab_desserts">Desserts</string>
+    <string name="lab_sides">Sides</string>
 </resources>
