Add Filter functions based on the text field (matching with the title of the dish) and the chips (matching with the category of the dish)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="location">Chicago</string>
     <string name="description">We are a family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist.</string>
     <string name="lab_order_for_delivery">Order for delivery!</string>
+    <string name="lab_all">All</string>
     <string name="lab_starters">Starters</string>
     <string name="lab_mains">Mains</string>
     <string name="lab_desserts">Desserts</string>
